--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,37 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
 asgiref==3.8.1
+async-timeout==4.0.3
+attrs==23.2.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+colorama==0.4.6
+distro==1.9.0
 Django==5.0.6
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
+exceptiongroup==1.2.2
+frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+multidict==6.0.5
+openai==0.28.0
 pillow==10.3.0
 psycopg==3.2.1
 psycopg-binary==3.2.1
 psycopg2==2.9.9
+pydantic==2.8.2
+pydantic_core==2.20.1
 python-dotenv==1.0.1
+requests==2.32.3
+sniffio==1.3.1
 sqlparse==0.5.0
+tqdm==4.66.4
 typing_extensions==4.11.0
 tzdata==2024.1
+urllib3==2.2.2
+yarl==1.9.4
