--- a/.github/workflows/production_educonnectpro-backend.yml
+++ b/.github/workflows/production_educonnectpro-backend.yml
@@ -31,9 +31,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Collect static files
-        run: |
-          cd backend 
-          python manage.py collectstatic --noinput
+        run: python manage.py collectstatic --noinput
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
