--- a/.github/workflows/production_educonnectpro-backend.yml
+++ b/.github/workflows/production_educonnectpro-backend.yml
@@ -31,7 +31,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Collect static files
-        run: python manage.py collectstatic --noinput
+        env:
+          MY_SECRET_KEY: ${{ secrets.MY_SECRET_KEY }}
+        run: |
+          python manage.py collectstatic --noinput
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
