--- a/.github/workflows/production_educonnectpro-backend.yml
+++ b/.github/workflows/production_educonnectpro-backend.yml
@@ -34,6 +34,11 @@ jobs:
         env:
           MY_SECRET_KEY: ${{ secrets.MY_SECRET_KEY }}
           WEBSITE_HOSTNAME: ${{ secrets.WEBSITE_HOSTNAME }}
+          PGDATABASE: ${{ secrets.PGDATABASE }}
+          PGUSER: ${{ secrets.PGUSER }}
+          PGPASSWORD: ${{ secrets.PGPASSWORD }}
+          PGHOST: ${{ secrets.PGHOST }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           python manage.py collectstatic --noinput
 
